--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "launchdarkly-node-server-sdk",
-  "version": "5.14.2",
-  "description": "LaunchDarkly Server-Side SDK for Node.js",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --ci --forceExit",
-    "check-typescript": "node_modules/typescript/bin/tsc",
-    "lint": "eslint --format 'node_modules/eslint-formatter-pretty' --ignore-path .eslintignore ."
-  },
-  "types": "./index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/launchdarkly/node-server-sdk.git"
-  },
-  "keywords": [
-    "launchdarkly",
-    "analytics",
-    "client"
+  "_args": [
+    [
+      "launchdarkly-node-server-sdk@5.14.2",
+      "/Users/danielobrien/Projects/Cloudflare-LD"
+    ]
   ],
-  "license": "Apache-2.0",
+  "_from": "launchdarkly-node-server-sdk@5.14.2",
+  "_id": "launchdarkly-node-server-sdk@5.14.2",
+  "_inBundle": false,
+  "_integrity": "sha512-nHcn07JOIM6XwtaAyYJR4xT8S4LHV/rr/7UiC16qNlMgNzDeJ0Q74tWrOn2Uk1J+V4AjhXZUyZTd4RwcBoFUeA==",
+  "_location": "/launchdarkly-node-server-sdk",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "launchdarkly-node-server-sdk@5.14.2",
+    "name": "launchdarkly-node-server-sdk",
+    "escapedName": "launchdarkly-node-server-sdk",
+    "rawSpec": "5.14.2",
+    "saveSpec": null,
+    "fetchSpec": "5.14.2"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/launchdarkly-node-server-sdk/-/launchdarkly-node-server-sdk-5.14.2.tgz",
+  "_spec": "5.14.2",
+  "_where": "/Users/danielobrien/Projects/Cloudflare-LD",
   "bugs": {
     "url": "https://github.com/launchdarkly/node-server-sdk/issues"
   },
-  "homepage": "https://github.com/launchdarkly/node-server-sdk",
   "dependencies": {
     "@types/redis": "^2.8.18",
     "async": "^3.1.0",
     "launchdarkly-eventsource": "1.4.0",
     "lrucache": "^1.0.3",
-    "node-cache": "^4.2.0",
+    "node-cache": "^5.1.2",
     "redis": "^3.0.2",
     "semver": "^6.3.0",
     "tunnel": "0.0.6",
@@ -36,9 +43,7 @@
     "winston": "^3.2.1",
     "yaml": "^1.0.1"
   },
-  "engines": {
-    "node": ">= 0.8.x"
-  },
+  "description": "LaunchDarkly Server-Side SDK for Node.js",
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
@@ -55,6 +60,10 @@
     "tmp": "^0.0.33",
     "typescript": "^3.8.3"
   },
+  "engines": {
+    "node": ">= 0.8.x"
+  },
+  "homepage": "https://github.com/launchdarkly/node-server-sdk",
   "jest": {
     "rootDir": ".",
     "testEnvironment": "node",
@@ -62,5 +71,24 @@
       "**/*-test.js"
     ],
     "testResultsProcessor": "jest-junit"
-  }
+  },
+  "keywords": [
+    "launchdarkly",
+    "analytics",
+    "client"
+  ],
+  "license": "Apache-2.0",
+  "main": "index.js",
+  "name": "launchdarkly-node-server-sdk",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/launchdarkly/node-server-sdk.git"
+  },
+  "scripts": {
+    "check-typescript": "node_modules/typescript/bin/tsc",
+    "lint": "eslint --format 'node_modules/eslint-formatter-pretty' --ignore-path .eslintignore .",
+    "test": "jest --ci --forceExit"
+  },
+  "types": "./index.d.ts",
+  "version": "5.14.2"
 }
