--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "launchdarkly-eventsource": "1.4.0",
     "lrucache": "^1.0.3",
     "node-cache": "^5.1.2",
+    "node-fetch": "^2.6.1",
     "redis": "^3.0.2",
     "semver": "^6.3.0",
     "tunnel": "0.0.6",
