--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "launchdarkly-eventsource": "1.4.0",
     "lrucache": "^1.0.3",
     "node-cache": "^5.1.2",
+    "pino": "^6.11.2",
     "semver": "^6.3.0",
     "tunnel": "0.0.6",
     "uuid": "^3.3.3",
-    "winston": "^3.2.1",
     "yaml": "^1.0.1"
   },
   "description": "LaunchDarkly Server-Side SDK for Node.js",
